--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         style="width: 50px;height: 50px;border-radius: 20%;">
         <span class="fs-4 text-white">Pricing example</span>
       </a>
-
+        <h1> Hellow</h1>
       <nav style="padding: 20px;" class="d-inline-flex mt-2 mt-md-0 ms-md-auto">
         <a class="me-3 py-2 link-body-emphasis text-decoration-none text-white" href="/">Главная страница</a>
         <a class="me-3 py-2 link-body-emphasis text-decoration-none text-white" href="/about">О нас</a>
